# proofessoor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE-MIT  README.md  clippy.toml  deny.toml
.github/workflows/: _shared-build.yaml  build-master.yml  build-release.yml  ci.yml
deploy/gpu/: .env.example  README.md  docker-compose.yml  zkboost.toml
deploy/mock/: .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml  zkboost.toml
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: BlockModal.svelte  CadenceStrip.svelte  Header.svelte  RequestsTable.svelte  Tooltip.svelte
frontend/src/lib/: api.ts  format.test.ts  format.ts  types.ts
src/: beacon.rs  config.rs  main.rs  metrics.rs  request.rs  runner.rs  status.rs  web.rs  zkboost.rs
tests/fixtures/: hoodi_block_3326688_fulu.ssz
