[package]
name = "proofessoor"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "Clientless execution-proof requestor for zkBoost"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
lighthouse_types = { git = "https://github.com/sigp/lighthouse", branch = "unstable", package = "types" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
indexing_slicing = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
inefficient_to_string = "warn"
module_name_repetitions = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
