[package]
name = "proofessoor"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "Clientless execution-proof requestor for zkBoost"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
# Must resolve to the same lighthouse source as zkboost-types, or the protocol
# types split into two incompatible copies (a build error). Both use
# branch = "unstable", and Cargo.lock pins the exact commit — the rev zkBoost
# v0.8.0 and the deployed prover are built against. Two distinct cautions:
#   - don't pin this to a rev/patch on our side alone: with zkBoost on `branch`
#     it splits the types (use the same source on both sides instead);
#   - don't `cargo update` past the pinned commit: the NewPayloadRequest encoding
#     could drift from the prover and roots would mismatch at runtime.
# --locked builds hold the pinned commit.
lighthouse_types = { git = "https://github.com/sigp/lighthouse", branch = "unstable", package = "types" }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ssz_types = "0.14"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
zkboost-client = { git = "https://github.com/eth-act/zkboost", tag = "v0.8.0" }
zkboost-types = { git = "https://github.com/eth-act/zkboost", tag = "v0.8.0" }

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
indexing_slicing = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
inefficient_to_string = "warn"
module_name_repetitions = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
